--- a/templates/paiements/liste_paiements.html
+++ b/templates/paiements/liste_paiements.html
@@ -62,11 +62,11 @@
                 <div class="card-body">
                     <div class="d-flex justify-content-between">
                         <div>
-                            <h4 class="card-title">{{ stats.montant_total|floatformat:0 }}</h4>
-                            <p class="card-text">Montant Total (F CFA)</p>
+                            <h4 class="card-title">{{ stats.total_paiements }}</h4>
+                            <p class="card-text">Total Paiements</p>
                         </div>
                         <div class="align-self-center">
-                            <i class="bi bi-currency-exchange fs-1"></i>
+                            <i class="bi bi-list-check fs-1"></i>
                         </div>
                     </div>
                 </div>
