--- a/templates/paiements/detail.html
+++ b/templates/paiements/detail.html
@@ -81,7 +81,7 @@
                     <div class="row mb-3">
                         <div class="col-sm-4"><strong>Propriété:</strong></div>
                         <div class="col-sm-8">
-                            {{ paiement.contrat.propriete.nom }}<br>
+                            {{ paiement.contrat.propriete.titre }}<br>
                             <span class="text-muted">Adresse: {{ paiement.contrat.propriete.adresse }}</span>
                         </div>
                     </div>
