--- a/templates/paiements/liste_partiels.html
+++ b/templates/paiements/liste_partiels.html
@@ -314,7 +314,7 @@
                                     </div>
                                     <div class="detail-item">
                                         <div class="detail-label">Propriété</div>
-                                        <div class="detail-value">{{ paiement.contrat.propriete.nom_propriete }}</div>
+                                        <div class="detail-value">{{ paiement.contrat.propriete.titre }}</div>
                                     </div>
                                     <div class="detail-item">
                                         <div class="detail-label">Type</div>
