--- a/templates/paiements/recus/detail_recu_recapitulatif.html
+++ b/templates/paiements/recus/detail_recu_recapitulatif.html
@@ -346,7 +346,7 @@
             <div class="info-item">
                 <div class="info-label">Propriété</div>
                 <div class="info-value">
-                    {{ recu.recapitulatif.propriete.nom }}<br>
+                    {{ recu.recapitulatif.propriete.titre }}<br>
                     <span class="text-muted">Adresse: {{ recu.recapitulatif.propriete.adresse }}</span>
                 </div>
             </div>
