--- a/templates/paiements/retraits/retrait_detail.html
+++ b/templates/paiements/retraits/retrait_detail.html
@@ -260,7 +260,7 @@
                                             {{ charge_detail.type_charge }}
                                         </span>
                                     </td>
-                                    <td>{{ charge_detail.propriete.nom }}</td>
+                                    <td>{{ charge_detail.propriete.titre }}</td>
                                     <td>{{ charge_detail.date_charge|date:"d/m/Y" }}</td>
                                     <td class="text-end">{{ charge_detail.charge.montant|floatformat:0|intcomma }} F CFA</td>
                                     <td class="text-end">
