--- a/templates/pdf/quittance_kbis.html
+++ b/templates/pdf/quittance_kbis.html
@@ -35,7 +35,7 @@
             </div>
             <div class="info-item">
                 <span class="label">Propriété :</span>
-                <span class="value">{{ quittance.contrat.propriete.nom|default:"N/A" }}</span>
+                <span class="value">{{ quittance.contrat.propriete.titre|default:"N/A" }}</span>
             </div>
             <div class="info-item">
                 <span class="label">Locataire :</span>
