--- a/templates/proprietes/documents/document_detail.html
+++ b/templates/proprietes/documents/document_detail.html
@@ -147,7 +147,7 @@
                     <div class="mb-3">
                         <h6>Propriété :</h6>
                         <a href="{% url 'proprietes:detail_propriete' document.propriete.pk %}" class="btn btn-outline-primary btn-sm w-100">
-                            <i class="fas fa-home me-2"></i>{{ document.propriete.nom }}
+                            <i class="fas fa-home me-2"></i>{{ document.propriete.titre }}
                         </a>
                     </div>
                     {% endif %}
