--- a/templates/proprietes/documents/document_list.html
+++ b/templates/proprietes/documents/document_list.html
@@ -156,7 +156,7 @@
                     <div class="mb-2">
                         {% if document.propriete %}
                         <span class="badge bg-info me-1">
-                            <i class="fas fa-home me-1"></i>{{ document.propriete.nom }}
+                            <i class="fas fa-home me-1"></i>{{ document.propriete.titre }}
                         </span>
                         {% endif %}
                         
